// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search box should hide results when query is empty 1`] = `
<Fragment>
  <TextInput
    aria-label="geosearch text input"
    data-cy="geosearch-text-input"
    onChange={[Function]}
    placeholder="Search to add a location..."
    style={
      Object {
        "marginBottom": 10,
      }
    }
    type="search"
    value=" "
  />
</Fragment>
`;

exports[`Search box should invoke add handler with the selected result and clear results 1`] = `
<Fragment>
  <TextInput
    aria-label="geosearch text input"
    data-cy="geosearch-text-input"
    onChange={[Function]}
    placeholder="Search to add a location..."
    style={
      Object {
        "marginBottom": 10,
      }
    }
    type="search"
    value=""
  />
  <div
    className="pf-c-options-menu pf-m-expanded"
    style={
      Object {
        "zIndex": 1100,
      }
    }
  >
    <ul
      className="pf-c-options-menu__menu"
    >
      <li
        key="place-id-1A"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          Address 1
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-0"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="place-id-2B"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          Address 2
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-1"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="place-id-3C"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          Address 3
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-2"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="place-id-4D"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          Address 4
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-3"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="place-id-5E"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          Address 5
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-4"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        className="pf-c-options-menu__separator"
        role="separator"
      />
      <li
        className="pf-c-options-menu__menu-item pf-m-disabled"
        key="attrib: License 1"
      >
        <TextContent>
          <Text
            component="small"
          >
            License 1
          </Text>
        </TextContent>
      </li>
      <li
        className="pf-c-options-menu__menu-item pf-m-disabled"
        key="attrib: License 2"
      >
        <TextContent>
          <Text
            component="small"
          >
            License 2
          </Text>
        </TextContent>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`Search box should render text input initially 1`] = `
<Fragment>
  <TextInput
    aria-label="geosearch text input"
    data-cy="geosearch-text-input"
    onChange={[Function]}
    placeholder="Search to add a location..."
    style={
      Object {
        "marginBottom": 10,
      }
    }
    type="search"
    value=""
  />
</Fragment>
`;

exports[`Search box should show results when query is entered 1`] = `
<Fragment>
  <TextInput
    aria-label="geosearch text input"
    data-cy="geosearch-text-input"
    onChange={[Function]}
    placeholder="Search to add a location..."
    style={
      Object {
        "marginBottom": 10,
      }
    }
    type="search"
    value="London"
  />
  <div
    className="pf-c-options-menu pf-m-expanded"
    style={
      Object {
        "zIndex": 1100,
      }
    }
  >
    <ul
      className="pf-c-options-menu__menu"
    >
      <li
        key="raw-place-id-1"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          London, ON, Canada
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-0"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="raw-place-id-2"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          London, OH, USA
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-1"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="raw-place-id-3"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          London, KY, USA
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-2"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        key="raw-place-id-4"
      >
        <div
          className="pf-c-options-menu__menu-item"
        >
          London, UK
          <Button
            className="pf-c-options-menu__menu-item-icon"
            data-cy="geosearch-location-item-button-3"
            onClick={[Function]}
            type="button"
            variant="link"
          >
            <PlusSquareIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </Button>
        </div>
      </li>
      <li
        className="pf-c-options-menu__separator"
        role="separator"
      />
      <li
        className="pf-c-options-menu__menu-item pf-m-disabled"
        key="attrib: License 1"
      >
        <TextContent>
          <Text
            component="small"
          >
            License 1
          </Text>
        </TextContent>
      </li>
      <li
        className="pf-c-options-menu__menu-item pf-m-disabled"
        key="attrib: License 2"
      >
        <TextContent>
          <Text
            component="small"
          >
            License 2
          </Text>
        </TextContent>
      </li>
    </ul>
  </div>
</Fragment>
`;
